# repl-8f2a08d6

./: .env  .replit  AML_DASHBOARD_DOCUMENTATION.md  complete_api_management_setup.sql  complete_profile_setup.sql  complete_supabase_setup.sql  index.html  package-lock.json  package.json  pyproject.toml  query.txt  replit.md  rls.txt  supabase_setup.sql  tsconfig.json  update_profile_schema.sql  vite.config.ts
attached_assets/: Pasted--23-06-43-286-Running-build-in-Washington-D-C-USA-East-iad1-23-06-43-287-Build-machine-co-1757007669816_1757007669817.txt  Pasted--Complete-SQL-script-to-set-up-profile-data-correctly-for-your-AML-Dashboard-Run-this-in-your--1757069976910_1757069976911.txt  Pasted--DOCTYPE-html-html-lang-en-head-title-Create-a-heatmap-layer-title-meta-prop-1757324386893_1757324386894.txt  Pasted--Enable-necessary-extensions-CREATE-EXTENSION-IF-NOT-EXISTS-uuid-ossp-Create-custom-type-1757070274836_1757070274838.txt  Pasted--Enable-necessary-extensions-CREATE-EXTENSION-IF-NOT-EXISTS-uuid-ossp-Create-custom-type-1757070431388_1757070431390.txt  Pasted--This-SQL-script-will-set-up-the-necessary-tables-and-functions-for-user-authentication-Run-th-1757069998232_1757069998233.txt  Pasted--Update-the-profiles-table-to-match-signup-form-fields-and-profile-page-requirements-Add-mis-1757069988505_1757069988506.txt  Pasted--const-App-const-showSignIn-setShowSignIn-useState-false-const-phone-set-1756823076830_1756823076832.txt  Pasted--i-want-to-connect-this-frontend-with-supabase-backend-so-auth-sign-in-and-up-works-with-all-u-1757058968505_1757058968508.txt  (+12 more)
(+95 files in other folders)
